--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,17 @@
 :root {
+  --color-accent-light: #BEE2fD;
+  --color-accent-one: #483EFF;
+  --color-accent-three: #f9818E;
+  --color-accent-two: #FFAF7E;
+  --color-bg-border: #D6D9E6;
   --color-bg: #EFF5FF;
-  --color-fg: #022959;
+  --color-black: #000;
+  --color-error: #EE374A;
+  --color-grey: #727588;
+  --color-primary: #022959;
+  --color-secondary-bg: #6259FF;
+  --color-secondary-button: #928CFF;
+  --color-secondary-light: #ABBCFF;
+  --color-secondary-lightest: #F8F9FF;
   --color-white: #FFF;
 }
