--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,9 +1,12 @@
 @import './functions';
 
-$font-size-regular: px-to-rem(16px);
-$font-size-lg: px-to-rem(24px);
-$font-size-xl: px-to-rem(32px);
-$font-weight-thin: 100;
-$font-weight-regular: 300;
-$font-weight-semi-bold: 500;
-$font-weight-bold: 700;
+$font-size-regular: px-to-rem(16);
+$font-size-lg: px-to-rem(24);
+$font-size-xl: px-to-rem(32);
+
+:root{
+  --font-weight-thin: 100;
+  --font-weight-reg: 300;
+  --font-weight-semi: 500;
+  --font-weight-bold: 700;  
+}
