--- a/src/components/PanelWrapper/PanelWrapper.scss
+++ b/src/components/PanelWrapper/PanelWrapper.scss
@@ -7,8 +7,10 @@
   gap: var(--spacing-lg);
   margin: var(--spacing-lg);
   padding: var(--spacing-xl) var(--spacing-lg);
+  width: 100%;
+  max-width: px-to-rem(940);
   background-color: var(--color-white);
-  border-radius: 10px;
+  border-radius: 10px
 }
 
 .panel-wrapper__title {
