--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -1,3 +1,5 @@
+@import './breakpoints';
+
 html {
   height: 100%;
   box-sizing: border-box;
@@ -18,8 +20,17 @@ html {
 body {
   margin: 0;
   background: var(--color-bg);
-  color: var(--color-fg);
+  color: var(--color-primary);
   font-family: Ubuntu, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+main {
+  @media (width > $mq-lg) {
+    display: grid;
+    padding: var(--spacing-lg);
+    height: 100vh;
+    place-items: center;
+  }
 }
