Added stepper component

--- a/src/styles/_units.scss
+++ b/src/styles/_units.scss
@@ -6,4 +6,5 @@
   --spacing-md: #{px-to-rem(12)};
   --spacing-lg: #{px-to-rem(24)};
   --spacing-xl: #{px-to-rem(32)};
+  --spacing-xxl: #{px-to-rem(48)};
 }
