--- a/src/components/PanelWrapper/PanelWrapper.scss
+++ b/src/components/PanelWrapper/PanelWrapper.scss
@@ -1,23 +1,16 @@
+@import '../../styles/breakpoints';
 @import "../../styles/functions";
-@import "../../styles/fonts";
 
 .panel-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: var(--spacing-lg);
-  margin: var(--spacing-lg);
-  padding: var(--spacing-xl) var(--spacing-lg);
-  width: 100%;
-  max-width: px-to-rem(940);
-  background-color: var(--color-white);
-  border-radius: 10px
+  @media (width > $mq-lg) {
+    display: grid;
+    grid-template-columns: px-to-rem(274) 2fr;
+    padding: var(--spacing-lg);
+    width: 100%;
+    max-width: px-to-rem(940);
+    background-color: var(--color-white);
+    border-radius: 10px;
+    place-items: center;
+  }
 }
 
-.panel-wrapper__title {
-  margin: 0;
-  font-size: $font-size-xl;
-}
-
-.panel-wrapper__desc {
-  margin: 0;
-}
