Added React Hooks Form package and hooked up the step one form fields

--- a/src/components/FormWrapper/FormWrapper.scss
+++ b/src/components/FormWrapper/FormWrapper.scss
@@ -3,3 +3,12 @@
   flex-direction: column;
   gap: var(--spacing-md)
 }
+
+.form-wrapper__actions {
+  display: flex;
+  justify-content: space-between;
+  
+  &:has(:only-child) {
+    justify-content: flex-end;
+  }
+}
