--- a/src/components/InputField/InputField.scss
+++ b/src/components/InputField/InputField.scss
@@ -1,12 +1,33 @@
-input {
+@import '../../styles/functions';
+
+.input-field {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-sm);
+}
+
+.input-field__label {
+
+}
+
+.input-field__error {
+  color: var(--color-error);
+  font-weight: var(--font-weight-semi);
+}
+
+.input-field__node {
+  --border-color: var(--color-bg-border);
+
   display: block;
-  margin-bottom: 8px;
-  padding: 12px 16px;
+  padding: var(--spacing-md);
   width: 100%;
-  border: 1px solid var(--color-bg-border, grey);
+  border: 1px solid var(--border-color, grey);
   border-radius: 8px;
-  color: var(--color-primary, red);
-  font-size: 16px;
+  color: var(--color-primary);
+  font-size: px-to-rem(16);
   font-weight: var(--font-weight-medium, 400);
-  line-height: 25px;
+
+  &--error {
+   --border-color: var(--color-error);
+  }
 }
