--- a/src/components/StepWrapper/StepWrapper.scss
+++ b/src/components/StepWrapper/StepWrapper.scss
@@ -13,7 +13,8 @@
   border-radius: 10px;
 
   @media (width > $mq-lg) {
-    margin-top: var(--spacing-lg);
+    margin: 0;
+    padding: 0;
   }
 }
 
