--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -34,3 +34,13 @@ main {
     place-items: center;
   }
 }
+
+.visually-hidden {
+  position: absolute;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
