--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -4,19 +4,33 @@
 .button {
   margin: 0;
   padding: 0;
-  padding: px-to-rem(14) px-to-rem(24);
-  background-color: var(--color-primary);
+  padding: var(--spacing-md) var(--spacing-lg);
   border: 0;
   border-radius: 8px;
-  color: var(--color-white);
   font-family: Ubuntu, sans-serif;
   font-size: px-to-rem(16);
   font-weight: var(--font-weight-semi);
   line-height: math.div(18, 16);
   cursor: pointer;
 
-  &:hover,
-  &:active {
-    background-color: var(--color-secondary-button);
+  
+  &--primary {
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    
+    &:hover,
+    &:active {
+      background-color: var(--color-secondary-button);
+    }
+  }
+
+  &--secondary {
+    background-color: transparent;
+    color: var(--color-grey);
+
+    &:hover,
+    &:active {
+      text-decoration: underline;
+    }
   }
 }
