Added checkbox fields

--- a/src/components/FieldGroup/FieldGroup.scss
+++ b/src/components/FieldGroup/FieldGroup.scss
@@ -12,7 +12,9 @@
   flex-direction: column;
   gap: var(--spacing-md);
 
-  @media (width > $mq-lg) {
-    flex-direction: row;
+  &--row {
+    @media (width > $mq-lg) {
+      flex-direction: row;
+    }
   }
 }
