--- a/src/components/RadioField/RadioField.scss
+++ b/src/components/RadioField/RadioField.scss
@@ -29,7 +29,15 @@
 }
 
 .radio-field__cost {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-xs);
   color: var(--color-grey);
   font-size: px-to-rem(14);
-  font-weight: var(--font-weight-thin);
+  font-weight: var(--font-weight-reg);
+
+  small {
+    color: var(--color-primary);
+    font-size: px-to-rem(14);
+  }
 }
