--- a/src/components/CheckboxField/CheckboxField.scss
+++ b/src/components/CheckboxField/CheckboxField.scss
@@ -9,7 +9,7 @@
   // TODO: Create mixin to share styles with radio
   display: flex;
   flex-direction: row;
-  gap: var(--spacing-sm);
+  gap: var(--spacing-lg);
   align-items: center;
   padding: var(--spacing-lg);
   border: 1px solid var(--color-bg-border);
@@ -21,6 +21,29 @@
   input:checked + & {
     background-color: var(--color-secondary-lightest);
     border: 1px solid var(--color-accent-one);
+  }
+}
+
+.checkbox-field__faux-box {
+  flex: 0 0 auto;
+  height: px-to-rem(18);
+  width: px-to-rem(18);
+  background-color: var(--color-white);
+  border: 1px solid var(--color-bg-border);
+  border-radius: 4px;
+
+  input:checked ~ .checkbox-field__label & {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-secondary-bg);
+    background-image: url('../../../public/img/icon-checkmark.svg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    border: 1px solid var(--color-secondary-bg);
+    transition: all 0.2s ease-in-out;
   }
 }
 
