--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,23 +1,23 @@
 @use 'sass:math';
-@import "../../styles/functions";
+@import '../../styles/functions';
+@import '../../styles/mixins';
 
 .button {
   margin: 0;
   padding: 0;
   padding: var(--spacing-md) var(--spacing-lg);
   border: 0;
-  border-radius: 8px;
+  border-radius: var(--border-radius-md);
   font-family: Ubuntu, sans-serif;
   font-size: px-to-rem(16);
   font-weight: var(--font-weight-semi);
   line-height: math.div(18, 16);
   cursor: pointer;
 
-  
   &--primary {
     background-color: var(--color-primary);
     color: var(--color-white);
-    
+
     &:hover,
     &:active {
       background-color: var(--color-secondary-button);
@@ -32,5 +32,9 @@
     &:active {
       text-decoration: underline;
     }
+  }
+
+  &:focus-visible {
+    @include focus-outline;
   }
 }
