--- a/src/components/CheckboxField/CheckboxField.scss
+++ b/src/components/CheckboxField/CheckboxField.scss
@@ -1,27 +1,17 @@
 @import '../../styles/breakpoints';
 @import '../../styles/functions';
+@import '../../styles/mixins';
 
 .checkbox-field {
   flex: 1;
 }
 
 .checkbox-field__label {
-  // TODO: Create mixin to share styles with radio
-  display: flex;
+  @include choice-label;
+
   flex-direction: row;
   gap: var(--spacing-lg);
   align-items: center;
-  padding: var(--spacing-lg);
-  border: 1px solid var(--color-bg-border);
-  border-radius: 0.5rem;
-  font-weight: var(--font-weight-semi);
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-
-  input:checked + & {
-    background-color: var(--color-secondary-lightest);
-    border: 1px solid var(--color-accent-one);
-  }
 }
 
 .checkbox-field__faux-box {
@@ -30,7 +20,7 @@
   width: px-to-rem(18);
   background-color: var(--color-white);
   border: 1px solid var(--color-bg-border);
-  border-radius: 4px;
+  border-radius: var(--border-radius-sm);
 
   input:checked ~ .checkbox-field__label & {
     position: relative;
