--- a/src/components/RadioField/RadioField.scss
+++ b/src/components/RadioField/RadioField.scss
@@ -1,25 +1,16 @@
 @import '../../styles/breakpoints';
 @import '../../styles/functions';
+@import '../../styles/mixins';
 
 .radio-field {
   flex: 1;
 }
 
 .radio-field__label {
-  display: flex;
+  @include choice-label;
+
   flex-direction: column;
   gap: var(--spacing-sm);
-  padding: var(--spacing-lg);
-  border: 1px solid var(--color-bg-border);
-  border-radius: 0.5rem;
-  font-weight: var(--font-weight-semi);
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-
-  input:checked + & {
-    background-color: var(--color-secondary-lightest);
-    border: 1px solid var(--color-accent-one);
-  }
 }
 
 .radio-field__icon {
