--- a/src/components/StepWrapper/StepWrapper.scss
+++ b/src/components/StepWrapper/StepWrapper.scss
@@ -1,6 +1,6 @@
-@import "../../styles/breakpoints";
-@import "../../styles/functions";
-@import "../../styles/fonts";
+@import '../../styles/breakpoints';
+@import '../../styles/functions';
+@import '../../styles/fonts';
 
 .step-wrapper {
   display: flex;
@@ -10,7 +10,7 @@
   padding: var(--spacing-xl) var(--spacing-lg);
   max-width: px-to-rem(940);
   background-color: var(--color-white);
-  border-radius: 10px;
+  border-radius: var(--border-radius-md);
 
   @media (width > $mq-lg) {
     margin: 0;
