--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -1,4 +1,5 @@
 @import '../../styles/functions';
+@import '../../styles/mixins';
 
 .toggle {
   display: flex;
@@ -6,7 +7,7 @@
   align-items: center;
   padding: var(--spacing-md);
   background-color: var(--color-secondary-lightest);
-  border-radius: 8px; // TODO: Add custom prop
+  border-radius: var(--border-radius-md);
   transition: all 0.3s ease-out 0s;
 }
 
@@ -52,8 +53,8 @@
   opacity: 0;
   cursor: pointer;
 
-  &:focus ~ .toggle__switcher {
-    outline: 2px dashed var(--color-accent-three);
+  &:focus-visible ~ .toggle__switcher {
+    @include focus-outline;
   }
 }
 
