--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -1,4 +1,5 @@
 @import './breakpoints';
+@import './_mixins';
 
 html {
   height: 100%;
@@ -36,11 +37,5 @@ main {
 }
 
 .visually-hidden {
-  position: absolute;
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  white-space: nowrap;
+  @include visually-hidden;
 }
