Refactored the buttons and links

--- a/src/components/ActionWrapper/ActionWrapper.scss
+++ b/src/components/ActionWrapper/ActionWrapper.scss
@@ -11,4 +11,13 @@
   @media (width > $mq-lg) {
     margin-top: auto;
   }
+
+  // @media (width < $mq-lg) {
+  //   position: fixed;
+  //   bottom: 0;
+  //   left: 0;
+  //   padding: var(--spacing-lg) var(--spacing-xl);
+  //   width: 100%;
+  //   background: var(--color-white);
+  // }
 }
