--- a/src/styles/_units.scss
+++ b/src/styles/_units.scss
@@ -9,4 +9,5 @@
   --spacing-lg: #{px-to-rem(24)};
   --spacing-xl: #{px-to-rem(32)};
   --spacing-xxl: #{px-to-rem(48)};
+  --spacing-xxxl: #{px-to-rem(92)};
 }
